--- a/src/app/code-snipets/code-snipets.component.html
+++ b/src/app/code-snipets/code-snipets.component.html
@@ -1,7 +1,13 @@
 <div class="code-snipet-container">
     <pre>
-        <code>
+        <code class="language-python">
             {{code}}
         </code>
     </pre>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/languages/go.min.js"></script>
+
+    <script>
+      hljs.highlightAll();
+    </script>
+
