--- a/src/app/main/projects-preview/project-square-preview/project-square-preview.component.html
+++ b/src/app/main/projects-preview/project-square-preview/project-square-preview.component.html
@@ -1,13 +1,13 @@
 <div class="preview-container">
     <div class="title">
-        <p>This is the title</p>
+        <p>{{title}}</p>
     </div>
     <div class="preview">
         <div class="preview-image">
             <img src="https://conceptodefinicion.de/wp-content/uploads/2014/03/codigo-.jpg" alt="">
         </div>
         <div class="info">
-            <p>This is some text introducing to the project</p>
+            <p>{{description}}</p>
         </div>
     </div>
 </div>
