--- a/src/app/code-snipets/code-snipets.component.css
+++ b/src/app/code-snipets/code-snipets.component.css
@@ -4,4 +4,19 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+    border: 1px solid #0085FF;
+    border-radius: 25px;
+    overflow-wrap: break-word;
+    overflow-x: auto;
+}
+code{
+    width: 100%;
+    overflow-wrap: break-word;
+    white-space: pre-line;
+    background-color: #0A0D2C;
+}
+pre{
+    width: 100%;
+
+    overflow-wrap: break-word;
 }
