--- a/src/app/main/projects-preview/projects-preview.component.html
+++ b/src/app/main/projects-preview/projects-preview.component.html
@@ -1,29 +1,27 @@
 <div class="projects-preview-container">
-    <div class="title">
-        <app-text-title title="Projects"></app-text-title>
+  <div class="title">
+    <app-text-title title="Projects"></app-text-title>
+  </div>
+  <div class="grid-container">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 grid-section">
+      <div class="col">
+        <a routerLink="/project-one"><app-project-square-preview title="Project one" description="This is a test project"></app-project-square-preview></a>
+      </div>
+      <div class="col">
+        <app-project-square-preview title="Project one" description="This is a test project"></app-project-square-preview>
+      </div>
+      <div class="col">
+        <app-project-square-preview title="Project one" description="This is a test project"></app-project-square-preview>
+      </div>
+      <div class="col">
+        <app-project-square-preview title="Project one" description="This is a test project"></app-project-square-preview>
+      </div>
+      <div class="col">
+        <app-project-square-preview title="Project one" description="This is a test project"></app-project-square-preview>
+      </div>
+      <div class="col">
+        <app-project-square-preview title="Project one" description="This is a test project"></app-project-square-preview>
+      </div>
     </div>
-    <div class="grid-container">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 grid-section">
-            <div class="col">
-                <div class="prev-container">
-                    <app-project-square-preview></app-project-square-preview>
-                </div>
-            </div>
-            <div class="col">
-                <app-project-square-preview></app-project-square-preview>
-            </div>
-            <div class="col">
-                <app-project-square-preview></app-project-square-preview>
-            </div>
-            <div class="col">
-                <app-project-square-preview></app-project-square-preview>
-            </div>
-            <div class="col">
-                <app-project-square-preview></app-project-square-preview>
-            </div>
-            <div class="col">
-                <app-project-square-preview></app-project-square-preview>
-            </div>
-        </div>
-    </div>
+  </div>
 </div>
