--- a/src/app/code-snipets/code-snipets.component.html
+++ b/src/app/code-snipets/code-snipets.component.html
@@ -1,13 +1,20 @@
-<div class="code-snipet-container">
-    <pre>
-        <code class="language-python">
-            {{code}}
-        </code>
-    </pre>
-</div>
+<link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/vs2015.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/languages/go.min.js"></script>
 
     <script>
       hljs.highlightAll();
     </script>
+<div class="code-snipet-container">
+    <pre>
+        <code class="lang-py">
+            {{code}}
+        </code>
+    </pre>
+</div>
+
 
