--- a/src/app/main/projects-preview/project-square-preview/project-square-preview.component.css
+++ b/src/app/main/projects-preview/project-square-preview/project-square-preview.component.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: 0.7s;
 }
 
 .title{
@@ -50,4 +51,9 @@ p{
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+.preview-container:hover{
+    cursor: pointer;
+    transform: scale(1.1);
 }
