added animations, routing to sections

--- a/src/app/info-page/info-page.component.html
+++ b/src/app/info-page/info-page.component.html
@@ -2,42 +2,41 @@
   <div class="info">
     <app-text-section
       title="Machine Learning"
-      text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum."
+      text="Machine Learning is a form of AI that allows a system to learn from data instead of learning through explicit programming."
     ></app-text-section>
     <app-text-section
-      text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum."
+      text="Is the science of developing algorithms 
+      and statistical models that are used by computer systems in order 
+      to perform tasks without explicit instructions, instead of relying 
+      on patterns and inferences."
     ></app-text-section>
     <app-text-section
-      title="AI"
-      text="Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      Quisquam, voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Quisquam, voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      Quisquam, voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Quisquam, voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      Quisquam, voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Quisquam, voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum."
+      text="Is is a scientific discipline in the field of Artificial Intelligence that creates systems that learn automatically."
+    ></app-text-section>
+    <app-text-section
+      title="AI vs ML"
+      text="Machine Learning (ML) 
+      is a branch of Artificial Intelligence 
+      (AI), therefore they share certain characteristics, 
+      such as the use of data. On the other hand, they also 
+      share other similarities such as the performance of complex tasks, 
+      analysis and understanding of data, among others. They differ in the 
+      aspect that Machine Learning seeks to analyze large amounts of data in 
+      order to identify patterns and reach a result. However, when it comes to AI, 
+      being a broader concept, it has a number of different functions. In general, 
+      the goal is to solve complex human tasks in efficient ways."
     ></app-text-section>
     <app-text-section
       title="Purpose"
-      text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. lorem
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. lorem
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. lorem
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. lorem
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. lorem
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. lorem
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. lorem"
+      text="The purpose of this portfolio is to show certain aspects worked on AI and aims to show different projects that try to solve different problems.
+      The stack of technologies used may vary depending on the project, but consists mainly of RapidMiner and Python, as well as the use of different datasets."
     ></app-text-section>
-    <app-text-section
-      title="Definition 2"
-      text="Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. lorem
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. lorem
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. lorem
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. lorem
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. lorem
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. lorem
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. lorem"
-    ></app-text-section>
+    <app-text-section text="Furthermore, it is intended to demonstrate 
+    that these efforts have yielded concrete and measurable outcomes, 
+    contributing to the advancement of my understanding in the field of 
+    artificial intelligence and providing real value to the applications 
+    in which they have been implemented.
+    ">
+    </app-text-section>
   </div>
 </div>
