--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -4,12 +4,12 @@
     <img src="../../assets/arrow.png" alt="" />
   </div>
 </div>
-<div class="home-section">
+<div id="about" class="home-section">
   <app-aboutme></app-aboutme>
   <div class="down-icon">
     <img src="../../assets/arrow.png" alt="" />
   </div>
 </div>
-<div class="home-section">
+<div id="projects" class="home-section">
   <app-projects-preview></app-projects-preview>
 </div>
