--- a/src/app/navbar/navbar/navbar.component.html
+++ b/src/app/navbar/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   <div class="navbar-menu">
     <ul>
       <li><a routerLink="/landing-page">Home</a></li>
-      <li><a routerLink="/other-info">Other</a></li>
+      <li><a routerLink="/other-info">Intro</a></li>
       <li><a [routerLink]="['/landing-page']" fragment="about">About</a></li>
       <li><a [routerLink]="['/landing-page']" fragment="projects">Projects</a></li>
     </ul>
