text dots, projects, img

--- a/src/app/main/projects-preview/project-square-preview/project-square-preview.component.html
+++ b/src/app/main/projects-preview/project-square-preview/project-square-preview.component.html
@@ -7,7 +7,7 @@
             <img src="https://conceptodefinicion.de/wp-content/uploads/2014/03/codigo-.jpg" alt="">
         </div>
         <div class="info">
-            <p>{{description}}</p>
+            <p class="desc">{{description}}</p>
         </div>
     </div>
 </div>
