--- a/src/app/main/projects-preview/projects-preview.component.html
+++ b/src/app/main/projects-preview/projects-preview.component.html
@@ -5,7 +5,7 @@
   <div class="grid-container">
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 grid-section">
       <div class="col">
-        <a routerLink="/project-one"><app-project-square-preview title="Project one" description="This is a test project"></app-project-square-preview></a>
+        <a routerLink="/project-one"><app-project-square-preview title="Sports prediction LDA" description="This project aims to predict if an athlete will be good at some sport"></app-project-square-preview></a>
       </div>
       <div class="col">
         <app-project-square-preview title="Project one" description="This is a test project"></app-project-square-preview>
