--- a/src/app/main/projects-preview/project-square-preview/project-square-preview.component.css
+++ b/src/app/main/projects-preview/project-square-preview/project-square-preview.component.css
@@ -15,6 +15,7 @@
     justify-content: center;
     flex-direction: column;
     font-size: 28px;
+    margin-bottom: 5px !important;
 }
 .preview{
     width: 100%;
@@ -43,14 +44,34 @@ img{
 
 p{
     color: white;
+    margin: 0;
+}
+p.desc{
+    color: white;
+    margin: 0;
+    width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+desc{
+    white-space: nowrap; /* Evita que el texto se divida en varias líneas */
+    overflow: hidden; /* Oculta el texto que se desborda */
+    text-overflow: ellipsis; /* Agrega puntos suspensivos al final del texto desbordado */
+    text-align: left;
+    width: 100% !important; 
 }
 
 .info{
     width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    justify-content: flex-start;
+    align-items: flex-start;
+    text-align: left;
+    white-space: nowrap;
+    overflow: hidden; /* Oculta el texto que se desborda */
+    text-overflow: ellipsis; /* Agrega puntos suspensivos al final del texto desbordado */
+
 }
 
 .preview-container:hover{
