--- a/src/app/projects-views/pv-one/pv-one.component.html
+++ b/src/app/projects-views/pv-one/pv-one.component.html
@@ -27,14 +27,31 @@
      applications in the sports domain but also in talent identification and decision-making in 
      various fields where individual skills are critical to success."
   ></app-text-section>
-  <app-text-section title="Code" text="The code used in this project is shown below"></app-text-section>
+  <app-text-section
+    title="Code"
+    text="The code used in this project is shown below"
+  ></app-text-section>
   <app-code-snipets code="{{ code }}"></app-code-snipets>
   <app-text-section
-    title="Some RM"
-    text="This shows how the model works in RM"
+    title="Training"
+    text="This shows how the model works in RM and Python3"
+  ></app-text-section>
+  <app-text-section
+    text="The first step is to retrive the dataset. As you may see in the image below, after retrieving
+  I decided to filter the examples to work with a cleaner dataset. After filtering, a cross validation is performed"
   ></app-text-section>
   <app-image-content
-    imageRoute="../../assets/pdtest/pdtest1.png"
+    imageRoute="../../assets/pdtest/pdt6.png"
+  ></app-image-content>
+  <app-text-section
+    text="The content of the cross validation has a known supervised algorithm, Linear Discriminant Analysis.
+  After training data with that algorithm, the model was applied to check the results and its performance"
+  ></app-text-section>
+  <app-image-content
+    imageRoute="../../assets/pdtest/pdt5.png"
+  ></app-image-content>
+  <app-image-content
+    imageRoute="../../assets/pdtest/pdt7.png"
   ></app-image-content>
   <app-text-section
     text="The columns are similar to when using RM to evaluate a model, 
@@ -42,37 +59,28 @@
   recall, among others."
   ></app-text-section>
   <app-image-content
-    imageRoute="../../assets/pdtest/pdtest2.png"
-  ></app-image-content>
-  <app-image-content
-    imageRoute="../../assets/pdtest/pdtest3.png"
-  ></app-image-content>
-
-  <app-text-section
-    text="This shows the confusion matrix, which is a table that is often used to describe the performance of a classification model."
-  ></app-text-section>
-  <app-image-content
-    imageRoute="../../assets/pdtest/pdtest4.png"
-  ></app-image-content>
-
-  <app-text-section
-    text="To compare results and evalueate the model from another perspective, I chose to use RapidMiner Studio."
-  ></app-text-section>
-  <app-text-section
-    text="The first step is to retrive the dataset. As you may see in the image below, after retrieving
-  I decided to filter the examples to work with a cleaner dataset. After filtering, a cross validation is performed"
-  ></app-text-section>
-  <app-image-content
-    imageRoute="../../assets/pdtest/pdtest5.png"
+    imageRoute="../../assets/pdtest/pdt8.png"
   ></app-image-content>
   <app-text-section
-    text="The content of the cross validation has a known supervised algorithm, Linear Discriminant Analysis.
-  After training data with that algorithm, the model was applied to check the results and its performance"
+    title="Scoring"
+    text="This shows how the model works in RM and Python3 using scoring dataset"
   ></app-text-section>
   <app-image-content
-    imageRoute="../../assets/pdtest/pdtest6.png"
+    imageRoute="../../assets/pdtest/pdt9.png"
+  ></app-image-content>
+  <app-text-section
+    text="Using the scoring dataset, it can be seen at a 
+    glance that the values shown in the Python program are 
+    related to those of RM, taking into account the different 
+    categories mapped to numbers according to their index."
+  ></app-text-section>
+  <app-image-content
+    imageRoute="../../assets/pdtest/pdt10.png"
   ></app-image-content>
   <app-image-content
-    imageRoute="../../assets/pdtest/pdtest7.png"
+    imageRoute="../../assets/pdtest/pdt11.png"
+  ></app-image-content>
+  <app-image-content
+    imageRoute="../../assets/pdtest/pdt12.png"
   ></app-image-content>
 </div>
