--- a/src/app/main/projects-preview/project-square-preview/project-square-preview.component.html
+++ b/src/app/main/projects-preview/project-square-preview/project-square-preview.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="preview">
         <div class="preview-image">
-            <img src="https://conceptodefinicion.de/wp-content/uploads/2014/03/codigo-.jpg" alt="">
+            <img src={{imageRoute}} alt="">
         </div>
         <div class="info">
             <p class="desc">{{description}}</p>
