--- a/src/app/projects-views/pv-heart/pv-heart.component.html
+++ b/src/app/projects-views/pv-heart/pv-heart.component.html
@@ -1,32 +1,128 @@
 <div class="project-container">
-    <app-text-section title="Segundo ataque al corazón" text="En este apartado se intentará predecir 
+  <app-text-section
+    title="Segundo ataque al corazón"
+    text="En este apartado se intentará predecir 
     si es probable que se tenga un segundo ataque al corazón en base a ciertos datos de entrada.
      Para poder predecir esto, se usará un Regresión Logística. 
-     Se comparará tanto resultados obtenidos en Python como la herramienta RapidMiner.">
-    </app-text-section>
-     <app-subtitle-text-section title="Datos del problema" text="Para dicho problema se proveen datasets en formato csv, 
+     Se comparará tanto resultados obtenidos en Python como la herramienta RapidMiner."
+  >
+  </app-text-section>
+  <app-subtitle-text-section
+    title="Datos del problema"
+    text="Para dicho problema se proveen datasets en formato csv, 
      un dataset de entrenamiento y otro de scoring, en este caso se cuentan con los siguientes datos: 
-     Edad, Estado_civil, Sexo, Categoria_Peso, Colesterol, Manejo_stress, Trat_ansiedad, 2do_Ataque_corazon (Variable objetivo)">
-    </app-subtitle-text-section>
-    <app-subtitle-text-section title="Desarrollo con python" text="Para comenzar, se desarrolló un script en Python 
+     Edad, Estado_civil, Sexo, Categoria_Peso, Colesterol, Manejo_stress, Trat_ansiedad, 2do_Ataque_corazon (Variable objetivo)"
+  >
+  </app-subtitle-text-section>
+  <app-subtitle-text-section
+    title="Desarrollo con python"
+    text="Para comenzar, se desarrolló un script en Python 
     el cual dado un conjunto de datos (entrenamiento) y el uso de librerias como Pandas, sklearn, matplotlib, 
-    para poder predecir de forma adecuada la variable objetivo en base a los datos mencionados anteriormente.">
-    </app-subtitle-text-section>
-    <app-text-section text="Se utiliza la librería Pandas para abrir y cargar un conjunto de datos que se encuentra en un archivo CSV, 
-    y luego se examina su estructura y contenido para comprender cómo está organizado y qué tipo de información contiene.">
-    </app-text-section>
-    <app-code-snipets code="{{ code1 }}"></app-code-snipets>
-    <app-text-section text="Posteriormente se obtiene a partir del dataset los datos y clases correspondientes, 
-    separando de la entrada X, de la variable objetivo Y."></app-text-section>
-    <app-code-snipets code="{{ code2 }}"></app-code-snipets>
-    <app-text-section text="Se divide el conjunto de datos en 2, uno para entrenamiento y otro para prueba. 
-    Además se crea y entrena un modelo de Regresión logística."></app-text-section>
-    <app-code-snipets code="{{ code3 }}"></app-code-snipets>
-    <app-text-section text="Se hacen predicciones sobre las categorías o clases a las que pertenecen los datos en el conjunto de prueba y 
-    luego se examinan los resultados obtenidos."></app-text-section>
-    <app-code-snipets code="{{ code4 }}"></app-code-snipets>
-    <app-text-section text="Se prueba el modelo y se visualiza su rendimiento y la matriz de confusión."></app-text-section>
-    <app-code-snipets code="{{ code5 }}"></app-code-snipets>
-    <app-text-section text="El resultado de este último fragmento de código es el siguiente:"></app-text-section>
-    <app-image-content imageRoute="../../assets/HeartCase/pyImg1.png"></app-image-content>
-
+    para poder predecir de forma adecuada la variable objetivo en base a los datos mencionados anteriormente."
+  >
+  </app-subtitle-text-section>
+  <app-text-section
+    text="Se utiliza la librería Pandas para abrir y cargar un conjunto de datos que se encuentra en un archivo CSV, 
+    y luego se examina su estructura y contenido para comprender cómo está organizado y qué tipo de información contiene."
+  >
+  </app-text-section>
+  <app-code-snipets code="{{ code1 }}"></app-code-snipets>
+  <app-text-section
+    text="Posteriormente se obtiene a partir del dataset los datos y clases correspondientes, 
+    separando de la entrada X, de la variable objetivo Y."
+  ></app-text-section>
+  <app-code-snipets code="{{ code2 }}"></app-code-snipets>
+  <app-text-section
+    text="Se divide el conjunto de datos en 2, uno para entrenamiento y otro para prueba. 
+    Además se crea y entrena un modelo de Regresión logística."
+  ></app-text-section>
+  <app-code-snipets code="{{ code3 }}"></app-code-snipets>
+  <app-text-section
+    text="Se hacen predicciones sobre las categorías o clases a las que pertenecen los datos en el conjunto de prueba y 
+    luego se examinan los resultados obtenidos."
+  ></app-text-section>
+  <app-code-snipets code="{{ code4 }}"></app-code-snipets>
+  <app-text-section
+    text="Se prueba el modelo y se visualiza su rendimiento y la matriz de confusión."
+  ></app-text-section>
+  <app-code-snipets code="{{ code5 }}"></app-code-snipets>
+  <app-text-section
+    text="El resultado de este último fragmento de código es el siguiente:"
+  ></app-text-section>
+  <app-image-content
+    imageRoute="../../assets/HeartCase/pyImg1.png"
+  ></app-image-content>
+  <app-text-section
+    text="El resultado a simple vista parece bueno, ya que tiende a hacer predicciones certeras."
+  ></app-text-section>
+  <app-subtitle-text-section
+    title="Desarrollo con RapidMiner"
+    text="La idea de llevar a cabo el desarrollo en RM a la par con python, 
+    es poder llegar a ver diferencias y similitudes, además de aprender la poderosa herramienta que ofrece."
+  >
+  </app-subtitle-text-section>
+  <app-text-section
+    text="Para comenzar, primero se selecciona el dataset de entrenamiento, 
+para posteriormente indicar cual es la variable objetivo con un operador Set Role, 
+a continuación se hace un split en el dataset con proporciones de 70/30, siendo 70 para 
+los datos de entrada y 30 para los datos con los cual se va a testear el modelo. 
+En este caso se usa el operador de Logistic Regression y posteriormente se aplica el 
+modelo usando el operador Apply Model con los datos mencionados anteriormente. 
+Por último se agrega un operador Performance para poder ver el rendimiento del mismo."
+  >
+  </app-text-section>
+  <app-image-content
+    imageRoute="../../assets/HeartCase/RM1.png"
+  ></app-image-content>
+  <app-text-section
+    text="Obteniendo por resultado, un accuracy de 92.68%. 
+Además del resto de datos los cuales se asemejan a lo mostrado en la sección de python. 
+Si bien existe una diferencia, esta se puede dar por la distinta implementación de las 
+librerías utilizadas en python y la implementación detrás de los operadores de RapidMiner."
+  >
+  </app-text-section>
+  <app-image-content
+    imageRoute="../../assets/HeartCase/RM2.png"
+  ></app-image-content>
+  <app-subtitle-text-section
+    title="Uso del dataset scoring"
+    text="Partiendo de la base anterior, se mostrará los resultados obtenidos de aplicar 
+el dataset de scoring al modelo como datos de prueba, tanto en python como en RapidMiner."
+  >
+  </app-subtitle-text-section>
+  <app-text-section
+    text="En el caso de python, se hace uso prácticamente de los métodos detallados al inicio de este documento."
+  ></app-text-section>
+  <app-code-snipets code="{{ code6 }}"></app-code-snipets>
+  <app-text-section
+    text="Para RapidMiner, la estructura es semejante al modelo planteado anteriormente, 
+    únicamente descartando el operador Split y Performance, ya que el uso de el dataset
+     Scoring, permite que se pueda usar el dataset de entrenamiento completo como entrada 
+     al modelo para entrenarlo. Por otra parte se elimina el operador Performance, ya que,
+      al usar el dataset Scoring, este no presenta la variable a predecir, entonces, no hay 
+      forma de saber realmente si la predicción realizada es correcta, por ende el operador 
+      Performance no tiene lugar en esta implementación."
+  ></app-text-section>
+  <app-image-content
+    imageRoute="../../assets/HeartCase/RM3.png"
+    ></app-image-content>
+    <app-text-section
+    text="El resultado obtenido en python es el siguiente:"
+    ></app-text-section>
+    <app-image-content imageRoute="../../assets/HeartCase/PY2.png"></app-image-content>
+    <app-text-section text="El resultado obtenido en RapidMiner es el siguiente:"></app-text-section>
+    <app-image-content imageRoute="../../assets/HeartCase/RM4.png"></app-image-content>
+    <app-text-section text="Si bien no hay forma sencilla de comparar exactamente los resultados,
+    se puede comparar mediante ver cuantos “Si” y cuantos “No” hay."></app-text-section>
+    <app-text-section text="En el caso de python, si se agrega el siguiente código, se puede contar las cantidades:"></app-text-section>
+    <app-code-snipets code="{{ code7 }}"></app-code-snipets>
+    <app-text-section text="Obteniendo como resultado:"></app-text-section>
+    <app-image-content imageRoute="../../assets/HeartCase/PY3.png"></app-image-content>
+    <app-text-section text="En el caso de RapidMiner, el resultado es el siguiente:"></app-text-section>
+    <app-image-content imageRoute="../../assets/HeartCase/RM5.png"></app-image-content>
+    <app-text-section text="Por lo cual, no resulta tan diferente, 
+    aunque hay que aclarar que esto no sirve como confirmación para saber 
+    si el modelo funciona correctamente ya que los que predice como Si o No, 
+    pueden ser entradas diferentes en las diferentes implementaciones, 
+    pero no está de más conocer este número."></app-text-section>
+</div>
