--- a/src/app/info-page/info-page.component.html
+++ b/src/app/info-page/info-page.component.html
@@ -2,40 +2,35 @@
   <div class="info">
     <app-text-section
       title="Machine Learning"
-      text="Machine Learning is a form of AI that allows a system to learn from data instead of learning through explicit programming."
+      text="Machine Learning es una forma de IA que permite que un sistema aprenda a partir de datos en lugar de aprender a través de programación explícita"
     ></app-text-section>
     <app-text-section
-      text="Is the science of developing algorithms 
-      and statistical models that are used by computer systems in order 
-      to perform tasks without explicit instructions, instead of relying 
-      on patterns and inferences."
+      text="Es la ciencia de desarrollar algoritmos y modelos estadísticos que son utilizados por sistemas informáticos para realizar tareas sin necesidad de instrucciones explícitas, en lugar de depender de patrones e inferencias."
     ></app-text-section>
     <app-text-section
-      text="Is is a scientific discipline in the field of Artificial Intelligence that creates systems that learn automatically."
+      text="Es una disciplina científica en el campo de la Inteligencia Artificial que crea sistemas que aprenden de forma automática."
     ></app-text-section>
     <app-text-section
       title="AI vs ML"
-      text="Machine Learning (ML) 
-      is a branch of Artificial Intelligence 
-      (AI), therefore they share certain characteristics, 
-      such as the use of data. On the other hand, they also 
-      share other similarities such as the performance of complex tasks, 
-      analysis and understanding of data, among others. They differ in the 
-      aspect that Machine Learning seeks to analyze large amounts of data in 
-      order to identify patterns and reach a result. However, when it comes to AI, 
-      being a broader concept, it has a number of different functions. In general, 
-      the goal is to solve complex human tasks in efficient ways."
+        text="El Aprendizaje Automático (Machine Learning, ML) es una rama de la 
+        Inteligencia Artificial (IA), por lo tanto, comparten ciertas características, 
+        como el uso de datos. Por otro lado, también comparten otras similitudes, como la 
+        realización de tareas complejas, el análisis y comprensión de datos, entre otras. 
+        Difieren en el aspecto de que el Aprendizaje Automático busca analizar grandes cantidades 
+        de datos para identificar patrones y llegar a un resultado. Sin embargo, en lo que respecta a 
+        la IA, al ser un concepto más amplio, tiene una serie de funciones diferentes. En general, el 
+        objetivo es resolver tareas humanas complejas de manera eficiente."
     ></app-text-section>
     <app-text-section
-      title="Purpose"
-      text="The purpose of this portfolio is to show certain aspects worked on AI and aims to show different projects that try to solve different problems.
-      The stack of technologies used may vary depending on the project, but consists mainly of RapidMiner and Python, as well as the use of different datasets."
+      title="Propósito"
+      text="El propósito de este portafolio es mostrar ciertos aspectos 
+      trabajados en el campo de la Inteligencia Artificial y tiene como objetivo presentar 
+      diferentes proyectos que intentan resolver diversos problemas. La pila de tecnologías utilizadas puede variar según 
+      el proyecto, pero consiste principalmente en RapidMiner y Python, además del uso de diferentes conjuntos de datos."
     ></app-text-section>
-    <app-text-section text="Furthermore, it is intended to demonstrate 
-    that these efforts have yielded concrete and measurable outcomes, 
-    contributing to the advancement of my understanding in the field of 
-    artificial intelligence and providing real value to the applications 
-    in which they have been implemented.
+    <app-text-section text="Además, se pretende demostrar que estos esfuerzos han 
+    dado como resultado logros concretos y medibles, contribuyendo al avance de mi comprensión en el 
+    campo de la inteligencia artificial y proporcionando un valor real a las aplicaciones en las que se han implementado.
     ">
     </app-text-section>
   </div>
