--- a/src/app/main/aboutme/aboutme.component.html
+++ b/src/app/main/aboutme/aboutme.component.html
@@ -1,19 +1,19 @@
 <div class="about-me-container">
   <div class="about-me">
     <div class="title">
-        <app-text-title title="About me"></app-text-title>
+        <app-text-title title="Sobre mi"></app-text-title>
 
     </div>
     <p>
-      I'm Tomás, a <span>software developer</span> currently studying at
-      Universidad Católica del Uruguay. Passionate about
-      <span>algorithms</span>, I thrive on tackling complex coding challenges. I
-      excel as a <span>team player</span>, firmly believing in the power of
-      collaboration to create the best software solutions. My goal as a
-      developer is to refine my craft and make a <span>meaningful</span> impact
-      through efficient, user-friendly software. I'm excited about the endless
-      possibilities in tech and am committed to
-      <span>pushing the boundaries</span> of what can be achieved through code.
+      Soy Tomás, un <span>desarrollador de software</span> 
+      que actualmente estudia en la Universidad Católica del Uruguay. 
+      Apasionado por los <span>algoritmos</span>, me destaco al abordar desafíos 
+      de programación complejos. Resalto como <span>integrante de equipo</span>, 
+      creyendo firmemente en el poder de la colaboración para crear las mejores 
+      soluciones. Mi objetivo como desarrollador es perfeccionar mi oficio y 
+      hacer un <span>impacto significativo</span> a través de software eficiente y fácil de usar. 
+      Estoy motivado por las infinitas posibilidades en tecnología y me comprometo a <span>superar 
+      los límites</span> de lo que se puede lograr a través del código.
     </p>
   </div>
 </div>
