--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -1,8 +1,8 @@
 <div class="main-container">
     <div class="main">
         <div class="title">
-            <p>Hi, I'm&nbsp; <app-text-title title="Tomás"></app-text-title></p>
-            <p>And this is my</p>
+            <p>Hola! Soy&nbsp; <app-text-title title="Tomás"></app-text-title></p>
+            <p>Y estás viendo mi</p>
             <app-text-title title="ML Portfolio"></app-text-title>
           </div>
     </div>
