--- a/src/app/navbar/navbar/navbar.component.html
+++ b/src/app/navbar/navbar/navbar.component.html
@@ -6,8 +6,8 @@
     <ul>
       <li><a routerLink="/landing-page">Home</a></li>
       <li><a routerLink="/other-info">Intro</a></li>
-      <li><a [routerLink]="['/landing-page']" fragment="about">About</a></li>
-      <li><a [routerLink]="['/landing-page']" fragment="projects">Projects</a></li>
+      <li><a [routerLink]="['/landing-page']" fragment="about">Info</a></li>
+      <li><a [routerLink]="['/landing-page']" fragment="projects">Proyectos</a></li>
     </ul>
   </div>
 </div>
