--- a/src/app/main/projects-preview/projects-preview.component.html
+++ b/src/app/main/projects-preview/projects-preview.component.html
@@ -1,23 +1,20 @@
 <div class="projects-preview-container">
   <div class="title">
-    <app-text-title title="Projects"></app-text-title>
+    <app-text-title title="Proyectos"></app-text-title>
   </div>
   <div class="grid-container">
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 grid-section">
       <div class="col">
-        <a routerLink="/project-one"><app-project-square-preview title="Sports prediction LDA" description="(Supervised - Linear)" imageRoute="../../../assets/pdtest/Sports.jpg"></app-project-square-preview></a>
+        <a routerLink="/project-one"><app-project-square-preview title="Deportes LDA" description="(Supervised - Linear)" imageRoute="../../../assets/pdtest/Sports.jpg"></app-project-square-preview></a>
       </div>
       <div class="col">
-        <a routerLink="/project-two"><app-project-square-preview title="2nd Heart Attack" description="(Supervised - Logistic Regression)" imageRoute="../../../assets/HeartCase/heart.webp"></app-project-square-preview></a>
+        <a routerLink="/project-two"><app-project-square-preview title="2nd Ataque al Corazón" description="(Supervised - Logistic Regression)" imageRoute="../../../assets/HeartCase/heart.webp"></app-project-square-preview></a>
       </div>
       <div class="col">
-        <app-project-square-preview title="Project one" description="This is a test project"></app-project-square-preview>
+        <a routerLink="/project-three"><app-project-square-preview title="Titanic Case" description="(CRISP-DM) Caso de estudio" imageRoute="../../../assets/titanic/titanicPreview.webp"></app-project-square-preview></a>
       </div>
       <div class="col">
-        <app-project-square-preview title="Project one" description="This is a test project"></app-project-square-preview>
-      </div>
-      <div class="col">
-        <app-project-square-preview title="Project one" description="This is a test project"></app-project-square-preview>
+        <a routerLink="/project-four"><app-project-square-preview title="Refugio Animal" description="(CRISP-DM) Caso de estudio" imageRoute="../../../assets/shelter/shelterPreview.jpg"></app-project-square-preview></a>
       </div>
       <div class="col">
         <app-project-square-preview title="Project one" description="This is a test project"></app-project-square-preview>
