--- a/src/app/projects-views/pv-ckd/pv-ckd.component.html
+++ b/src/app/projects-views/pv-ckd/pv-ckd.component.html
@@ -201,5 +201,9 @@ realidad correspondía notckd. Lo cual a mi parecer es bastante aceptable ya que
 <app-text-section text="Por otra parte se predijeron 9 datos con notckd donde en realidad 
 correspondía ckd. Si bien lo mejor sería que esto sea 0 en este caso ya que siempre se intenta 
 predecir si es probable que tenga ckd, tampoco resulta tan preocupante porque sigue siendo bastante certero."></app-text-section>
+<app-subtitle-text-section title="Bibliografía"></app-subtitle-text-section>
+<app-source-link link="https://www.nhlbi.nih.gov/es/salud/anemia/causas#:~:text=Puede desarrollar anemia si su,al resto de su cuerpo."></app-source-link>
+<app-source-link link="https://www.kidney.org/atoz/content/about-chronic-kidney-disease"></app-source-link>
+<app-source-link link="https://www.niddk.nih.gov/health-information/kidney-disease/chronic-kidney-disease-ckd"></app-source-link>
 
 </div>
