--- a/src/app/projects-views/pv-shelter/pv-shelter.component.html
+++ b/src/app/projects-views/pv-shelter/pv-shelter.component.html
@@ -6,7 +6,7 @@
     aplicación de la politica no-kill hacia los animales, por ende alberga 
     anualmente muchos animales, al rededor de 18.000. Este refugio está sumamente 
     involucrado tanto con la comunidad como con diferentes entidades con el fin de 
-    proteger a los animales. En este caso los datos proporcionados son de 2013.
+    proteger a los animales.
     ">
     </app-text-section>
     <app-text-section text="Se tratará de predecir si un animal será adoptado 
@@ -119,6 +119,8 @@
     (los meses) para así llevar a un resultado más certero porque tener una rango de años con meses.
     Por otra parte, también se podría cambiar la edad de los perros a un formato uniforme, 
     ya que este contiene varias inconsistencias. Esto facilitaría al modelo a realizar mejores predicciones."></app-text-section>
+    <app-subtitle-text-section title="Bibliografía"></app-subtitle-text-section>
+    <app-source-link link="https://www.austintexas.gov/austin-animal-center"></app-source-link>
 
 
 </div>
