--- a/src/app/main/aboutme/aboutme.component.html
+++ b/src/app/main/aboutme/aboutme.component.html
@@ -5,15 +5,11 @@
 
     </div>
     <p>
-      Soy Tomás, un <span>desarrollador de software</span> 
-      que actualmente estudia en la Universidad Católica del Uruguay. 
-      Apasionado por los <span>algoritmos</span>, me destaco al abordar desafíos 
-      de programación complejos. Resalto como <span>integrante de equipo</span>, 
-      creyendo firmemente en el poder de la colaboración para crear las mejores 
+      Actualmente estudio Ingeniería en Informática en la Universidad Católica del Uruguay. 
+      Con gusto por los <span>algoritmos</span>, me resulta de interés abordar <span>desafíos 
+      de programación</span> complejos. Creo firmemente en el poder del <span>trabajo en equipo</span> para crear las mejores 
       soluciones. Mi objetivo como desarrollador es perfeccionar mi oficio y 
-      hacer un <span>impacto significativo</span> a través de software eficiente y fácil de usar. 
-      Estoy motivado por las infinitas posibilidades en tecnología y me comprometo a <span>superar 
-      los límites</span> de lo que se puede lograr a través del código.
+      lograr un <span>impacto significativo</span> a través del software. 
     </p>
   </div>
 </div>
