--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -1,9 +1,9 @@
 <div class="main-container">
-    <div class="main">
-        <div class="title">
-            <p>Hola! Soy&nbsp; <app-text-title title="Tomás"></app-text-title></p>
-            <p>Y estás viendo mi</p>
-            <app-text-title title="ML Portfolio"></app-text-title>
-          </div>
+  <div class="main">
+    <div class="title">
+      <p>
+        Hola! Soy <span>Tomás</span>, un <span>desarrollador de software</span> apasionado por la tecnología.
+      </p>
     </div>
+  </div>
 </div>
