--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -53,3 +53,9 @@
     0% { transform: translateY(0); }
     100% { transform: translateY(-20px); }
 }
+
+@media screen and (max-width: 600px) {
+    app-main{
+        width: 100%;
+    }
+}
