--- a/src/app/main/aboutme/aboutme.component.css
+++ b/src/app/main/aboutme/aboutme.component.css
@@ -12,7 +12,7 @@ span{
 }
 
 .about-me{
-    width: 70%;
+    width: 90%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -32,4 +32,10 @@ span{
 p{
     color: white;
     font-size: 28px;
+}
+
+@media screen and (max-width: 600px) {
+    p{
+        font-size:x-large;
+    }
 }
