--- a/src/app/main/main/main.component.css
+++ b/src/app/main/main/main.component.css
@@ -9,10 +9,16 @@
 }
 
 .title{
+    width: 90%;
     color: white;
     font-size: 54px;
     font-weight: bold;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 p{
@@ -33,8 +39,21 @@ p{
     
 }
 
+span{
+    display: contents;
+    color: #0085FF;
+}
+
 @media screen and (max-width: 600px) {
     p{
         flex-direction: column;
+    }
+    .title{
+        font-size:xx-large;
+        
+    }
+    .main-container{
+        margin-top: 0;
+        width: 100%;
     }
 }
